<resources>
    <string name="app_name">WaxTree</string>

    <!-- Launch Activity -->
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="btnSignUp">signUp</string>
    <string name="btnSignIn">signIn</string>
    <string name="authFailed">User Authentication Failed </string>
    <string name="authSuccess">User Authentication Successful</string>

    <!-- Projects -->
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="link">Link</string>
    <string name="image">Image</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="email">Email</string>
    <string name="type">Type</string>

    <string name="Favorites">Favorites</string>


</resources>
